--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ body{
     background-color: hsl(0, 0%, 15%);
     border-radius: 15px;
     max-width: 596px;
+    max-height: 850px;
     overflow: hidden;
 }
 #display{
@@ -38,6 +39,8 @@ button{
     font-size: 2rem;
     font-weight: bold;
     cursor: pointer;
+    opacity: 1; /* Fully visible by default */
+    transition: opacity 0.3s; /* Smooth transition for visibility */
 }
 button:hover{
     background-color: hsl(0, 0%, 40%);
