--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,7 @@ button:active{
 }
 .operator-btn:hover{
     background-color: hsl(35, 100%, 65%);
+    animation: spin_357 0.5s linear;
 }
 .operator-btn:active{
     background-color: hsl(35, 100%, 75%);
@@ -66,3 +67,28 @@ button:active{
 .conv-btn:active{
     background-color: hsl(120, 65%, 65%);
 }
+.mode-btn.active{
+    background: linear-gradient(135deg, #14ffe9, #ffeb3b, #ff00e0);
+    /* background-color: #007bff; Highlight color */
+    animation: animate 1.5s linear infinite;
+    color: #100f0f; /* black text for active button */
+    border-color: #e30f9d;
+    transition: 0.4s ease-in-out;
+    transition-property: color;
+}
+
+ @keyframes animate {
+        100% {
+          filter: hue-rotate(360deg);
+        }
+      }
+ @keyframes spin_357 {
+        from {
+          transform: rotate(0deg);
+        }
+      
+        to {
+          transform: rotate(360deg);
+        }
+      }
+      
